Overflow issue

--- a/styles/blog.less
+++ b/styles/blog.less
@@ -168,7 +168,7 @@
   }
 
   .post-title {
-    margin: -.75em 1rem 0;
+    margin: -.75em 0 0;
   }
 
   .post-categories,
